--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "typescript": "5.2.2",
     "zod": "^3.22.2"
   },
+  "overrides": {
+    "next": "^13.4.1"
+  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
